# shader-experiments

./: CMakeLists.txt  README.md
glad-lib/include/glad/: glad.h
glad-lib/src/: glad.c
source/: main.cpp
